k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  type: LoadBalancer  # Cambiado a LoadBalancer para acceso público
  ports:
    - protocol: TCP
      port: 3306         # Puerto público
      targetPort: 3306   # Puerto interno del contenedor
  selector:
    app: mysql           # Vincula al StatefulSet de MySQL
