k8s/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
spec:
  type: LoadBalancer  
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 5173
