k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: php-app.local  # Reemplaza con tu dominio o IP pública
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: php-app-service
              port:
                number: 80
